test-cases/valid/reject/print_array.ul
void main() {

    string[2] strings;
    strings[0] = "Foo";
    strings[1] = "Bar";

    println strings; // Cannot print arrays
}
